# valyu-mcp

./: .env.example  .gitignore  Dockerfile  README.md  SYSTEM_PROMPT.md  docker-compose.yml  pyproject.toml
.trellis/spec/backend/: directory-structure.md  error-handling.md
.trellis/tasks/05-21-valyu-mcp-server/: check.jsonl  implement.jsonl  prd.md  task.json
.trellis/tasks/05-21-valyu-mcp-server/research/: fastmcp-http.md  valyu-api.md
.trellis/tasks/archive/2026-05/00-bootstrap-guidelines/: task.json
.trellis/workspace/zhaozheng/: index.md  journal-1.md
tests/: test_client.py  test_server.py
valyu_mcp/: __init__.py  __main__.py  client.py  config.py  server.py
